--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,7 @@ body {
 h1 {
   font-size: 3rem;
   font-weight: 700;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 h2 {
@@ -73,8 +73,8 @@ a:hover {
   background-color: rgb(var(--post-background-rgb));
   border-radius: 0.5rem;
   box-shadow: var(--post-shadow);
-  padding: 2rem;
-  margin-bottom: 2rem;
+  padding: 1rem;
+  margin-bottom: 1rem;
   transition: box-shadow 0.2s ease-in-out;
 }
 
@@ -86,4 +86,7 @@ a:hover {
   .text-balance {
     text-wrap: balance;
   }
+  .mb-xs {
+      margin-bottom: 0.25rem;
+    }
 }
