--- a/app/globals.css
+++ b/app/globals.css
@@ -20,23 +20,23 @@ body {
 h1 {
   font-size: 3rem;
   font-weight: 700;
-  margin-bottom: 1rem;
+  margin-bottom: 10rem;
 }
 
 h2 {
   font-size: 1.875rem;
   font-weight: 600;
-  margin-bottom: 1rem;
+  margin-bottom: 6rem;
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: 600;
-  margin-bottom: 0.75rem;
+  margin-bottom: 0.6rem;
 }
 
 p {
-  margin-bottom: 1rem;
+  margin-bottom: 0.7rem;
 }
 
 a {
@@ -48,6 +48,15 @@ a {
 a:hover {
   color: rgb(var(--primary-rgb));
   text-decoration: underline;
+}
+
+ul, ol {
+  padding-left: 0.2rem;
+  margin-bottom: 0.7rem;
+}
+
+li {
+  margin-bottom: 0.2rem;
 }
 
 .container {
