--- a/app/globals.css
+++ b/app/globals.css
@@ -17,22 +17,33 @@ body {
   font-family: Inter, sans-serif;
 }
 
-h1 {
-  font-size: 3rem;
+h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
-  margin-bottom: 10rem;
+  margin-bottom: 1rem;
+}
+
+h1 {
+  font-size: 2rem;
 }
 
 h2 {
-  font-size: 1.8rem;
-  font-weight: 600;
-  margin-bottom: 6rem;
+  font-size: 1.5rem;
 }
 
 h3 {
-  font-size: 1.2rem;
-  font-weight: 600;
-  margin-bottom: 0.6rem;
+  font-size: 1.25rem;
+}
+
+h4 {
+  font-size: 1.125rem;
+}
+
+h5 {
+  font-size: 1.1rem;
+}
+
+h6 {
+  font-size: 1rem;
 }
 
 p {
@@ -96,6 +107,6 @@ li {
     text-wrap: balance;
   }
   .mb-xs {
-      margin-bottom: 0.25rem;
-    }
+    margin-bottom: 0.25rem;
+  }
 }
